<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_bg_bottom_sheet_dialog"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:elevation="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:transitionName="@string/transition_name">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5.5dp"
            android:layout_alignParentEnd="true">

            <com.ryanamaral.arykey.common.view.CircularPulseView
                android:id="@+id/circularPulseView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/pulse_margin"
                android:layout_marginEnd="@dimen/pulse_margin"
                android:layout_marginStart="@dimen/pulse_margin"
                android:layout_marginTop="@dimen/pulse_margin"
                app:cpv_color="#FFB2B2"
                app:cpv_radius_initial="@dimen/pulse_radius"
                tools:background="#22FFB2B2" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie_usb_stick.json"
                app:lottie_loop="false"
                app:lottie_scale="1"
                app:lottie_speed="0.5" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--// Content -->
                <LinearLayout
                    android:id="@+id/contentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <!--// App Wrapper-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutApp"
                            style="@style/TextInputLayoutDropdownDefaultStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            app:boxStrokeColor="@color/grey"
                            app:errorEnabled="true"
                            android:hint="@string/edittext_app_hint">

                            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                android:id="@+id/autoCompleteTextViewApp"
                                style="@style/ItemTextAppearance"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:dropDownWidth="wrap_content"
                                android:dropDownAnchor="@+id/textInputLayoutApp"
                                android:nextFocusDown="@+id/autoCompleteTextViewAccount"
                                tools:text="GitHub" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/imageViewApp"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_alignStart="@id/textInputLayoutApp"
                            android:layout_alignTop="@id/textInputLayoutApp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/ic_apps"
                            />
                    </RelativeLayout>

                    <!--// Email Wrapper-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="0dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutAccount"
                            style="@style/TextInputLayoutDropdownDefaultStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:autofillHints="emailAddress"
                            android:hint="@string/user_id_hint"
                            app:errorEnabled="true">

                            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                android:id="@+id/autoCompleteTextViewAccount"
                                style="@style/ItemTextAppearance"
                                android:paddingRight="20dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:inputType="text"
                                android:imeOptions="actionNext"
                                android:dropDownWidth="wrap_content"
                                android:dropDownAnchor="@+id/textInputLayoutAccount"
                                android:nextFocusDown="@+id/buttonUnlock"
                                tools:text="test@ryanamaral.com" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/imageViewUser"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_alignStart="@id/textInputLayoutAccount"
                            android:layout_alignTop="@id/textInputLayoutAccount"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/ic_account" />
                    </RelativeLayout>

                    <!--// Buttons Wrapper-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/buttonCancel"
                                style="@style/Default.Button.Outlined"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="16dp"
                                android:text="@string/button_cancel"  />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/buttonUnlock"
                                style="@style/Unlock.Button.Unelevated"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginStart="8dp"
                                android:text="@string/button_unlock" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <!--// Top -->
        <LinearLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="29dp"
                android:contentDescription="@string/app_logo_content_description"
                android:gravity="center_vertical"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/sans_semi_bold"
                android:gravity="center_vertical"
                android:paddingBottom="2dp"
                android:text="@string/app_name"
                android:textColor="@color/logo_title"
                android:textSize="26sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
